[gd_scene load_steps=17 format=2]

[ext_resource path="res://OpticalEnemy/OpticalEnemy2.png" type="Texture" id=1]
[ext_resource path="res://OpticalEnemy/OpticalEnemy4.png" type="Texture" id=2]
[ext_resource path="res://OpticalEnemy/OpticalEnemy8.png" type="Texture" id=3]
[ext_resource path="res://OpticalEnemy/OpticalEnemy3.png" type="Texture" id=4]
[ext_resource path="res://OpticalEnemy/OpticalEnemy9.png" type="Texture" id=5]
[ext_resource path="res://OpticalEnemy/OpticalEnemy6.png" type="Texture" id=6]
[ext_resource path="res://OpticalEnemy/OpticalEnemy5.png" type="Texture" id=7]
[ext_resource path="res://OpticalEnemy/OpticalEnemy7.png" type="Texture" id=8]
[ext_resource path="res://OpticalEnemy/OpticalEnemy1.png" type="Texture" id=9]
[ext_resource path="res://OpticalEnemy/OpticalEnemy0.png" type="Texture" id=10]
[ext_resource path="res://OpticalEnemy/OpticalEnemy.gd" type="Script" id=11]
[ext_resource path="res://icon.png" type="Texture" id=12]
[ext_resource path="res://OpticalEnemy/OpticalEnemyAlert.wav" type="AudioStream" id=13]
[ext_resource path="res://OpticalEnemy/OpticalEnemyAttack.wav" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 3 ) ],
"loop": false,
"name": "Ticking",
"speed": 14.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Attacking",
"speed": 12.0
} ]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.1, 0.1, 0.1 )

[node name="OpticalEnemy" type="Spatial"]
script = ExtResource( 11 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0, 0, 0 )
frames = SubResource( 1 )
animation = "Ticking"
frame = 8
playing = true

[node name="Cursor" type="Sprite3D" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 12 )

[node name="VisibilityStaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="VisibilityStaticBody"]
shape = SubResource( 2 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0, 0, 0 )
aabb = AABB( -4, -4, -4, 8, 8, 8 )

[node name="AlertSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 5.0

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 15.0
